# src/FacilityManagement.Api/swagger.json
@@ -1159,6 +1159,48 @@
         }
       }
     },
+    "/api/User/token": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Authenticate User.",
+        "description": "Authenticate User.",
+        "operationId": "authenticate",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/AuthenticateRequest"
+            }
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Server Error"
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/AuthenticateResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/User/page/{pageSize}/{index}": {
       "get": {
         "tags": [
@@ -1207,6 +1249,17 @@
     }
   },
   "definitions": {
+    "AccessRight": {
+      "format": "int32",
+      "enum": [
+        0,
+        1,
+        2,
+        3,
+        4
+      ],
+      "type": "integer"
+    },
     "AddressDto": {
       "type": "object",
       "properties": {
@@ -1224,6 +1277,29 @@
           "type": "string"
         },
         "postalCode": {
+          "type": "string"
+        }
+      }
+    },
+    "AuthenticateRequest": {
+      "type": "object",
+      "properties": {
+        "userName": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "AuthenticateResponse": {
+      "type": "object",
+      "properties": {
+        "accessToken": {
+          "type": "string"
+        },
+        "userId": {
+          "format": "uuid",
           "type": "string"
         }
       }
@@ -1766,6 +1842,32 @@
       ],
       "type": "integer"
     },
+    "Privilege": {
+      "type": "object",
+      "properties": {
+        "privilegeId": {
+          "$ref": "#/definitions/PrivilegeId"
+        },
+        "roleId": {
+          "$ref": "#/definitions/RoleId"
+        },
+        "accessRight": {
+          "$ref": "#/definitions/AccessRight"
+        },
+        "aggregate": {
+          "type": "string"
+        }
+      }
+    },
+    "PrivilegeId": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "format": "uuid",
+          "type": "string"
+        }
+      }
+    },
     "ProblemDetails": {
       "type": "object",
       "properties": {
@@ -1904,6 +2006,13 @@
         },
         "name": {
           "type": "string"
+        },
+        "privileges": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Privilege"
+          },
+          "readOnly": true
         }
       }
     },
