# src/FacilityManagement.App/src/app/@api/models/access-right.ts
@@ -1,0 +1,2 @@
+/* tslint:disable */
+export type AccessRight = 0 | 1 | 2 | 3 | 4;
