# src/FacilityManagement.App/src/app/@api/models/authenticate-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface AuthenticateRequest {
+  password?: string;
+  userName?: string;
+}
