# src/FacilityManagement.App/src/app/@api/models/privilege-id.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface PrivilegeId {
+  value?: string;
+}
