# src/FacilityManagement.App/src/app/@api/models/role.ts
@@ -1,6 +1,8 @@
 /* tslint:disable */
+import { Privilege } from './privilege';
 import { RoleId } from './role-id';
 export interface Role {
   name?: string;
+  privileges?: Array<Privilege>;
   roleId?: RoleId;
 }
