# src/FacilityManagement.Core/AggregatesModel/UserAggregate/Commands/Authenticate.cs
@@ -7,61 +7,58 @@ using Microsoft.EntityFrameworkCore;
 
 namespace FacilityManagement.Core
 {
-    public class Authenticate
+    public class AuthenticateValidator : AbstractValidator<AuthenticateRequest>
     {
-        public class Validator : AbstractValidator<Request>
+        public AuthenticateValidator()
         {
-            public Validator()
-            {
-                RuleFor(x => x.UserName).NotNull();
-                RuleFor(x => x.Password).NotNull();
-            }
+            RuleFor(x => x.UserName).NotNull();
+            RuleFor(x => x.Password).NotNull();
+        }
+    }
+
+    public record AuthenticateRequest(string UserName, string Password) : IRequest<AuthenticateResponse>;
+
+    public record AuthenticateResponse(string AccessToken, Guid UserId);
+
+    public class AuthenticateHandler : IRequestHandler<AuthenticateRequest, AuthenticateResponse>
+    {
+        private readonly IFacilityManagementDbContext _context;
+        private readonly IPasswordHasher _passwordHasher;
+        private readonly ITokenBuilder _tokenBuilder;
+
+        public AuthenticateHandler(IFacilityManagementDbContext context, IPasswordHasher passwordHasher, ITokenBuilder tokenBuilder)
+        {
+            _context = context;
+            _passwordHasher = passwordHasher;
+            _tokenBuilder = tokenBuilder;
         }
 
-        public record Request(string UserName, string Password) : IRequest<Response>;
-
-        public record Response(string AccessToken, Guid UserId);
-
-        public class Handler : IRequestHandler<Request, Response>
+        public async Task<AuthenticateResponse> Handle(AuthenticateRequest request, CancellationToken cancellationToken)
         {
-            private readonly IFacilityManagementDbContext _context;
-            private readonly IPasswordHasher _passwordHasher;
-            private readonly ITokenBuilder _tokenBuilder;
+            var user = await _context.Users
+                .SingleOrDefaultAsync(x => x.UserName == request.UserName);
 
-            public Handler(IFacilityManagementDbContext context, IPasswordHasher passwordHasher, ITokenBuilder tokenBuilder)
-            {
-                _context = context;
-                _passwordHasher = passwordHasher;
-                _tokenBuilder = tokenBuilder;
-            }
+            if (user == null)
+                throw new Exception();
 
-            public async Task<Response> Handle(Request request, CancellationToken cancellationToken)
-            {
-                var user = await _context.Users
-                    .SingleOrDefaultAsync(x => x.UserName == request.UserName);
+            if (!ValidateUser(user, _passwordHasher.HashPassword(user.Salt, request.Password)))
+                throw new Exception();
 
-                if (user == null)
-                    throw new Exception();
+            var token = _tokenBuilder
+                .AddUsername(user.UserName)
+                .AddClaim(new System.Security.Claims.Claim(SharedKernelConstants.ClaimTypes.UserId, $"{user.UserId}"))
+                .AddClaim(new System.Security.Claims.Claim(SharedKernelConstants.ClaimTypes.Username, $"{user.UserName}"))
+                .Build();
 
-                if (!ValidateUser(user, _passwordHasher.HashPassword(user.Salt, request.Password)))
-                    throw new Exception();
+            return new AuthenticateResponse(token, user.UserId.Value);
+        }
 
-                var token = _tokenBuilder
-                    .AddUsername(user.UserName)
-                    .AddClaim(new System.Security.Claims.Claim(SharedKernelConstants.ClaimTypes.UserId, $"{user.UserId}"))
-                    .AddClaim(new System.Security.Claims.Claim(SharedKernelConstants.ClaimTypes.Username, $"{user.UserName}"))
-                    .Build();
+        public bool ValidateUser(User user, string transformedPassword)
+        {
+            if (user == null || transformedPassword == null)
+                return false;
 
-                return new(token, user.UserId.Value);
-            }
-
-            public bool ValidateUser(User user, string transformedPassword)
-            {
-                if (user == null || transformedPassword == null)
-                    return false;
-
-                return user.Password == transformedPassword;
-            }
+            return user.Password == transformedPassword;
         }
     }
 }
